manifests/showks-aggregator/manifest.yaml
---
# Source: showks-aggregator/templates/rolebinding.yml
---
# Source: showks-aggregator/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showks-aggregator
  namespace: showks
  labels:
    app: showks-aggregator
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: app-port
  selector:
    app: showks-aggregator

---
# Source: showks-aggregator/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-aggregator
  namespace: showks
  labels:
    app: showks-aggregator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showks-aggregator
  template:
    metadata:
      labels:
        app: showks-aggregator
    spec:
      containers:
        - name: showks-aggregator
          image: gcr.io/ipc-containerdays/showks-aggregator:prod-5969980b57383dddda73ab851721b4f889d809d5
          ports:
            - name: app-port
              containerPort: 8081
              protocol: TCP
