manifests/showks-aggregator/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-aggregator-temp
  namespace: showks
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "20"
spec:
  rules:
  - host: aggregator.prod.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-aggregator-temp
          servicePort: 8081

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-aggregator
  namespace: showks
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: aggregator.prod.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-aggregator
          servicePort: 8081
